# THUNER

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  README.rst  config.json  create_cdsapi.sh  dev_requirements.txt  environment.yml  meta.yml  pyproject.toml  requirements.txt  setup.py
demo/: cpol.ipynb  cpol.rst  era5.ipynb  gridrad.ipynb  himawari.ipynb  kitchen_sink_1.ipynb  kitchen_sink_2.ipynb  parallel.ipynb  parallelize.ipynb  synth.ipynb  synthetic.ipynb  synthetic.py
doc/: conf.py  index.rst
docs/: conf.py  environment.yml  requirements.txt
docs/source/: api.rst  conf.py  design.rst  for_developers.rst  index.rst  installation.rst  introduction.rst  tutorial.rst  tutorials.rst  usage.rst
examples/: CPOL.ipynb  cpol_demo.ipynb
thor/: .coverage  __init__.py  config.py  grid.py  group.py  log.py  option.py  parallel.py  tag.py  track.py  utils.py  write.py
thor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
thor/analyze/: mcs.py  utils.py
thor/attribute/: __init__.py  attribute.py  core.py  detect.py  ellipse.py  group.py  option.py  profile.py  quality.py  tag.py  utils.py
thor/data/: access.py  aura.py  data.py  dispatch.py  era5.py  gridrad.py  gridrad_stacey.py  input.ipynb  odim.py  option.py  synthetic.py  utils.py  wrf.py
thor/detect/: detect.py  preprocess.py  steiner.py
thor/group/: group.py
thor/match/: __init__.py  correlate.py  match.py  tint.py  utils.py
thor/object/: __init__.py  box.py  object.py
thor/option/: default_input.py  default_track.py  track.py
thor/property/: __init__.py  detect.py
thor/synth/: __init__.py  synth.py
thor/test/: .coverage  PET0.ESMF_LogFile  __init__.py  test_add.py  test_aura.py  test_era5.py  test_gen_option.py  test_gridrad.py  test_option.py  test_parallel.py  test_setup.py  test_synthetic.py
thor/visualize/: __init__.py  analysis.py  attribute.py  utils.py  (+4 more)
thuner/: __init__.py  config.py  default.py  grid.py  meta.yaml  option.py  parallel.py  track.py  utils.py
workflow/: wget_gridrad.sh
(+308 files in other folders)
