[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thor"
version = "0.0.1"
description = "Thunderstorm hierachical object reconnoitrer"
authors = [
    { name = "Ewan Short", email = "ewan.short@unimelb.edu.au" }
]
dependencies = [
    "numpy",
    "arm_pyart",
    "numpy",
    "numba",
    "scipy",
    "scikit-image",
    "pandas",
    "matplotlib",
    "xarray",
    "cartopy",
    "typing_extensions",
    "pre-commit",
    "black",
    "pytest",
    "pytest-cov",
    "codecov",
    "ipykernel",
    "netcdf4",
    "h5netcdf",
    "requests",
    "arm_pyart",
    "tqdm",
    "cdsapi",
    "xesmf",
    "opencv-python",
]
license = { text = "BSD-3-Clause" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]