[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thuner"
version = "0.0.1"
description = "Thunderstorm event reconnaissance"
authors = [{name = "Ewan Short", email = "ewan.short@unimelb.edu.au"}]
dynamic = ["dependencies"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
